--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 Hello
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J493PGQ04S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J493PGQ04S');
+</script>
